// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationSettings View ContactList renders correctly 1`] = `
<Table
  type="flat"
>
  <TableHeader>
    <TableHeaderRow>
      <TableHeaderCell>
        Email
      </TableHeaderCell>
      <TableHeaderCell />
      <TableHeaderCell
        align="middle"
      >
        New
        <br />
        Version
      </TableHeaderCell>
      <TableHeaderCell
        align="middle"
      >
        Successful
        <br />
        Publish
      </TableHeaderCell>
      <TableHeaderCell
        align="middle"
      >
        Failed
        <br />
        Publish
      </TableHeaderCell>
      <TableHeaderCell />
    </TableHeaderRow>
  </TableHeader>
  <TableBody>
    <TableRow
      key="bit.bot@bitrise.io"
    >
      <TableCell
        shrink={true}
      >
        bit.bot@bitrise.io
      </TableCell>
      <TableCell
        align="middle"
      >
        Confirmed
      </TableCell>
      <TableCell
        shrink={true}
      >
        <Toggle
          alignChildren="middle"
          checked={true}
          onChange={[Function]}
        />
      </TableCell>
      <TableCell
        shrink={true}
      >
        <Toggle
          alignChildren="middle"
          checked={true}
          onChange={[Function]}
        />
      </TableCell>
      <TableCell
        shrink={true}
      >
        <Toggle
          alignChildren="middle"
          checked={true}
          onChange={[Function]}
        />
      </TableCell>
      <TableCell
        shrink={true}
      >
        <Base
          borderRadius="x1"
          className="delete"
          onClick={[Function]}
          padding="x1"
        >
          <Icon
            color="red-3"
            name="Trash"
            size="1.5rem"
          />
        </Base>
      </TableCell>
    </TableRow>
    <TableRow
      key="purr.request@bitrise.io"
    >
      <TableCell
        shrink={true}
      >
        purr.request@bitrise.io
      </TableCell>
      <TableCell
        align="middle"
      >
        Pending
      </TableCell>
      <TableCell
        shrink={true}
      >
        <Toggle
          alignChildren="middle"
          checked={false}
          onChange={[Function]}
        />
      </TableCell>
      <TableCell
        shrink={true}
      >
        <Toggle
          alignChildren="middle"
          checked={false}
          onChange={[Function]}
        />
      </TableCell>
      <TableCell
        shrink={true}
      >
        <Toggle
          alignChildren="middle"
          checked={true}
          onChange={[Function]}
        />
      </TableCell>
      <TableCell
        shrink={true}
      >
        <Base
          borderRadius="x1"
          className="delete"
          onClick={[Function]}
          padding="x1"
        >
          <Icon
            color="red-3"
            name="Trash"
            size="1.5rem"
          />
        </Base>
      </TableCell>
    </TableRow>
  </TableBody>
</Table>
`;

exports[`NotificationSettings View ContactList renders correctly on mobile 1`] = `
<Table
  type="flat"
>
  <TableBody>
    <TableRow
      key="bit.bot@bitrise.io"
    >
      <TableCell>
        <Base
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Email:
          </Text>
           
          bit.bot@bitrise.io
        </Base>
        <Base
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Status:
          </Text>
           
          Confirmed
        </Base>
        <Flex
          alignChildrenHorizontal="between"
          direction="horizontal"
          gap="x2"
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            weight="bold"
            width="9rem"
          >
            New Version:
          </Text>
           
          <Toggle
            alignChildren="middle"
            checked={true}
            onChange={[Function]}
          />
        </Flex>
        <Flex
          alignChildrenHorizontal="between"
          direction="horizontal"
          gap="x2"
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            weight="bold"
            width="9rem"
          >
            Successful Publish:
          </Text>
           
          <Toggle
            alignChildren="middle"
            checked={true}
            onChange={[Function]}
          />
        </Flex>
        <Flex
          alignChildrenHorizontal="between"
          direction="horizontal"
          gap="x2"
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            weight="bold"
            width="9rem"
          >
            Failed Publish:
          </Text>
           
          <Toggle
            alignChildren="middle"
            checked={true}
            onChange={[Function]}
          />
        </Flex>
      </TableCell>
    </TableRow>
    <TableRow
      key="purr.request@bitrise.io"
    >
      <TableCell>
        <Base
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Email:
          </Text>
           
          purr.request@bitrise.io
        </Base>
        <Base
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            inline={true}
            weight="bold"
          >
            Status:
          </Text>
           
          Pending
        </Base>
        <Flex
          alignChildrenHorizontal="between"
          direction="horizontal"
          gap="x2"
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            weight="bold"
            width="9rem"
          >
            New Version:
          </Text>
           
          <Toggle
            alignChildren="middle"
            checked={false}
            onChange={[Function]}
          />
        </Flex>
        <Flex
          alignChildrenHorizontal="between"
          direction="horizontal"
          gap="x2"
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            weight="bold"
            width="9rem"
          >
            Successful Publish:
          </Text>
           
          <Toggle
            alignChildren="middle"
            checked={false}
            onChange={[Function]}
          />
        </Flex>
        <Flex
          alignChildrenHorizontal="between"
          direction="horizontal"
          gap="x2"
          paddingVertical="x1"
        >
          <Text
            color="grape-5"
            weight="bold"
            width="9rem"
          >
            Failed Publish:
          </Text>
           
          <Toggle
            alignChildren="middle"
            checked={true}
            onChange={[Function]}
          />
        </Flex>
      </TableCell>
    </TableRow>
  </TableBody>
</Table>
`;
